fixed ordervalidation spacing problem

--- a/assets/style/_order.scss
+++ b/assets/style/_order.scss
@@ -254,13 +254,19 @@
   }
 
   &__input {
-    margin-bottom: $spacing__s;
     border: none;
     height: 30px;
     font-size: 18px;
   }
 
+  &__validation-text {
+    height: 20px;
+    content: "";
+    margin-bottom: 5px;
+  }
+
   &__checkout {
+    margin-top: 20px;
     padding: 1rem;
     background: #78b9fb;
     text-align: center;
